--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <div class="bordes"></div></div>
   <br>
   <div class="ejercicios">
-   <h2><a href="Ejercicio2.html">Ejercicio 2</a></h2>
+   <h2><a href="tp2/index.html">Ejercicio 2</a></h2>
    <div class="bordes"></div></div>
    <br> 
    <div class="ejercicios">
