--- a/tp2/index.html
+++ b/tp2/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TP2 - Selectores CSS</title>
-    <link  href="styles.ccs" rel="stylesheet" title="Default Style>
+     <link href="styles.css" rel="stylesheet" title="Default Style" />
 </head>
 <body>
     <h1>Star Wars</h1>
