--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
    <div class="bordes"></div></div>
    <br> 
    <div class="ejercicios">
-   <h2><a href="Ejercicio3.html">Ejercicio 3</a></h2>
+   <h2><a href="tp3/index.html">Ejercicio 3</a></h2>
    <br>
    <div class="ejercicios">
    <div class="bordes"></div></div>
