--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
    <br>
    <div class="ejercicios">
    <div class="bordes"></div></div>
-   <h2><a href="Ejercicio4.html">Ejercicio 4</a></h2>
+   <h2><a href="tp-4/index.html">Ejercicio 4</a></h2>
    <br>
    <div class="ejercicios">
    <div class="bordes"></div></div>
