--- a/index.html
+++ b/index.html
@@ -1,61 +1,84 @@
 <html>
-  <head>
-     <title> Ejercicios </title>
-    <style>
-         .conteiner{
-          background-color: green;
-          text-align: center;
-          font-family: Arial, Helvetica, sans-serif;
-             width: 600px;
-             height: 600px;
-             border: 1px solid #ccc;
-             padding: 20px;
-             margin: 40px auto;
-        }
-        .ejercicios{
-          margin-bottom: 10px;
-        }
-        .ejercicios a{
-          color:#ccc;
-          text-decoration: none;
-        }
-        .ejercicios a:hover{
-          color:#666;
-        }
-        .ejercicios a:active{
-          color:#999;
-        }
-        .bordes{
-          border-bottom:1px solid #fff ;
-          margin-bottom: 10px;
-        }
-    </style>
-</head>
- <body>
-   <br>
-   <div class="conteiner">
-  <h1>Ejercicios</h1> 
-  <div class="ejercicios">
-  <br>
-   <h2><a href="tp1/ejercicio1.html">Ejercicio 1</a></h2>
-      <div class="bordes"></div></div>
-  <br>
-  <div class="ejercicios">
-   <h2><a href="tp2/index.html">Ejercicio 2</a></h2>
-   <div class="bordes"></div></div>
-   <br> 
-   <div class="ejercicios">
-   <h2><a href="tp3/index.html">Ejercicio 3</a></h2>
-   <br>
-   <div class="ejercicios">
-   <div class="bordes"></div></div>
-   <h2><a href="tp-4/index.html">Ejercicio 4</a></h2>
-   <br>
-   <div class="ejercicios">
-   <div class="bordes"></div></div>
-   <h2><a href="Ejercicio5.html">Ejercicio 5</a></h2>
-   <br>
-   <div class="bordes"></div></div>
+<head>
+  <title>Ejercicios</title>
+  <style>
+    body {
+      background-color: #e8f5e9; 
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
 
- </body>
+    .conteiner {
+      background-color: #a5d6a7; 
+      text-align: center;
+      width: 600px;
+      border-radius: 12px;
+      padding: 30px 20px;
+      margin: 50px auto;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    }
+
+    h1 {
+      color: #1b5e20;
+      margin-bottom: 30px;
+    }
+
+    .ejercicios {
+      margin-bottom: 20px;
+    }
+
+    .ejercicios a {
+      color: #2e7d32;
+      text-decoration: none;
+      font-size: 20px;
+      transition: color 0.3s ease;
+    }
+
+    .ejercicios a:hover {
+      color: #1b5e20;
+    }
+
+    .ejercicios a:active {
+      color: #388e3c;
+    }
+
+    .bordes {
+      border-bottom: 1px solid #c8e6c9;
+      width: 80%;
+      margin: 10px auto;
+    }
+  </style>
+</head>
+<body>
+  <div class="conteiner">
+    <h1>Ejercicios</h1> 
+    <div class="ejercicios">
+      <h2><a href="tp1/ejercicio1.html">Ejercicio 1</a></h2>
+      <div class="bordes"></div>
+    </div>
+
+    <div class="ejercicios">
+      <h2><a href="tp2/index.html">Ejercicio 2</a></h2>
+      <div class="bordes"></div>
+    </div>
+
+    <div class="ejercicios">
+      <h2><a href="tp3/index.html">Ejercicio 3</a></h2>
+      <div class="bordes"></div>
+    </div>
+
+    <div class="ejercicios">
+      <h2><a href="tp-4/index.html">Ejercicio 4</a></h2>
+      <div class="bordes"></div>
+    </div>
+
+    <div class="ejercicios">
+      <h2><a href="Ejercicio5.html">Ejercicio 5</a></h2>
+      <div class="bordes"></div>
+    </div>
+  </div>
+
+  
+</body>
 </html>
