--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
   <div class="conteiner">
     <h1>Ejercicios</h1> 
     <div class="ejercicios">
-      <h2><a href="tp1/ejercicio1.html">Ejercicio 1</a></h2>
+      <h2><a href="tp-1/ejercicio1.html">Ejercicio 1</a></h2>
       <div class="bordes"></div>
     </div>
 
     <div class="ejercicios">
-      <h2><a href="tp2/index.html">Ejercicio 2</a></h2>
+      <h2><a href="tp-2/index.html">Ejercicio 2</a></h2>
       <div class="bordes"></div>
     </div>
 
     <div class="ejercicios">
-      <h2><a href="tp3/index.html">Ejercicio 3</a></h2>
+      <h2><a href="tp-3/index.html">Ejercicio 3</a></h2>
       <div class="bordes"></div>
     </div>
 
@@ -74,7 +74,7 @@
     </div>
 
     <div class="ejercicios">
-      <h2><a href="Ejercicio5.html">Ejercicio 5</a></h2>
+      <h2><a href="tp-5.html">Ejercicio 5</a></h2>
       <div class="bordes"></div>
     </div>
   </div>
