--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@
       <h2><a href="tp-5.html">Ejercicio 5</a></h2>
       <div class="bordes"></div>
     </div>
+
+     <div class="ejercicios">
+      <h2><a href="tp-6.html">Ejercicio 6</a></h2>
+      <div class="bordes"></div>
+
+        <div class="ejercicios">
+      <h2><a href="tp-7.html">Ejercicio 7</a></h2>
+      <div class="bordes"></div>
+    </div>
+    </div>
   </div>
 
   
