--- a/tp-7/index.html
+++ b/tp-7/index.html
@@ -52,7 +52,7 @@
   </div>
 
   <div class="container mb-5">
-    <p>*The Walking Dead: The Game* es una serie interactiva de Telltale Games que sigue las vidas de Lee Everett y Clementine. Ambientada en un mundo postapocalíptico, la historia combina tensión, dilemas morales y vínculos emocionales.</p>
+    <p>The Walking Dead: The Game es una serie interactiva de Telltale Games que sigue las vidas de Lee Everett y Clementine. Ambientada en un mundo postapocalíptico, la historia combina tensión, dilemas morales y vínculos emocionales.</p>
     <p>Las decisiones del jugador influyen en el desarrollo de la narrativa, generando una experiencia única en cada partida. Desde proteger a Clementine hasta enfrentarse a grupos hostiles, cada acción importa.</p>
   </div>
 
