--- a/index.html
+++ b/index.html
@@ -73,21 +73,20 @@
       <div class="bordes"></div>
     </div>
 
-    <div class="ejercicios">
-      <h2><a href="tp-5.html">Ejercicio 5</a></h2>
+       <div class="ejercicios">
+      <h2><a href="tp-5/index.html">Ejercicio 1</a></h2>
+      <div class="bordes"></div>
+
+             <div class="ejercicios">
+      <h2><a href="tp-6/index.html">Ejercicio 1</a></h2>
       <div class="bordes"></div>
     </div>
 
-     <div class="ejercicios">
-      <h2><a href="tp-6.html">Ejercicio 6</a></h2>
-      <div class="bordes"></div>
-
-        <div class="ejercicios">
-      <h2><a href="tp-7.html">Ejercicio 7</a></h2>
+             <div class="ejercicios">
+      <h2><a href="tp-7/index.html">Ejercicio 1</a></h2>
       <div class="bordes"></div>
     </div>
     </div>
-  </div>
 
   
 </body>
