--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 
     <div class="ejercicios">
       <a href="tp-3/index.html"> Ejercicio 3</a>
+          <div class="bordes"></div>
     </div>
 
     <div class="ejercicios">
