--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@
       <div class="bordes"></div>
     </div>
 
+      <div class="ejercicios">
+      <a href="tp-10/index.html"> Ejercicio 10</a>
+      <div class="bordes"></div>
+    </div>
+
     <div class="flower">🌸</div>
   </div>
 </body>
