--- a/index.html
+++ b/index.html
@@ -135,6 +135,16 @@
       <a href="tp-10/index.html"> Ejercicio 10</a>
       <div class="bordes"></div>
     </div>
+    
+     <div class="ejercicios">
+      <a href="tp-11/index.html"> Ejercicio 10</a>
+      <div class="bordes"></div>
+    </div>
+    
+     <div class="ejercicios">
+      <a href="tp-12/index.html"> Ejercicio 10</a>
+      <div class="bordes"></div>
+    </div>
 
     <div class="flower">🌸</div>
   </div>
