--- a/index.html
+++ b/index.html
@@ -146,7 +146,14 @@
       <div class="bordes"></div>
     </div>
 
+     <div class="ejercicios">
+      <a href="tp-14/index.html"> Ejercicio 14</a>
+      <div class="bordes"></div>
+    </div>
+
+
     <div class="flower">🌸</div>
+     <div class="flower">🌸</div>
   </div>
 </body>
 </html>
