--- a/index.html
+++ b/index.html
@@ -150,7 +150,11 @@
       <a href="tp-14/index.html"> Ejercicio 14</a>
       <div class="bordes"></div>
     </div>
-
+    
+ <div class="ejercicios">
+      <a href="tp-16/index.html"> Ejercicio 16</a>
+      <div class="bordes"></div>
+    </div>
 
     <div class="flower">🌸</div>
      <div class="flower">🌸</div>
